--- a/swach.html
+++ b/swach.html
@@ -16,6 +16,10 @@
 
 <body background="SBbgD.png">
 
+    <button id="logout" class="btn btn-danger" onclick="logout();"> <span
+        class="glyphicon glyphicon-log-out"></span>
+    Logout</button>
+
     <center>
         <h1 id="heading">
           Keep Our Bharat "Swachh Bharat"
@@ -24,6 +28,8 @@
         <p>Can you see any garbage around you? If yes then click below to share location of waste on google earth</p>
         <br><br>
         <input id="address" class="adress_input" placeholder="Put your Adress here" >
+
+       
               
         <br><br>
          <button class="btn btn-warning" id="address" type="button" onclick="submit_address()">Submit Address</button>
